Fixed image covering the list element issue by setting z index to the image

--- a/src/App.css
+++ b/src/App.css
@@ -263,6 +263,7 @@ body{
   left: -100%;
   top: -50px;
   height: 500px;
+  z-index: -10;
 }
 
 .tours-locations{
